[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/art/UI/Green Button.png/0.png" type="Texture" id=1]
[ext_resource path="res://assets/art/UI/Green Button.png/2.png" type="Texture" id=2]
[ext_resource path="res://src/UserInterface/BitPickle.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/art/UI/Green Button.png/1.png" type="Texture" id=4]
[ext_resource path="res://src/UserInterface/PauseScreen.gd" type="Script" id=5]
[ext_resource path="res://assets/art/UI/Quit Button.png/2.png" type="Texture" id=6]
[ext_resource path="res://assets/art/UI/Quit Button.png/0.png" type="Texture" id=7]
[ext_resource path="res://assets/art/UI/Quit Button.png/1.png" type="Texture" id=8]

[node name="PauseScreen" type="CanvasLayer"]
pause_mode = 2
layer = 2

[node name="Pause" type="Control" parent="."]
visible = false
margin_right = 1920.0
margin_bottom = 1080.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Pause"]
pause_mode = 2
margin_right = 1920.0
margin_bottom = 1080.0
color = Color( 0, 0, 0, 0.27451 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Pause"]
pause_mode = 2
margin_right = 1920.0
margin_bottom = 1080.0
custom_constants/margin_right = 50
custom_constants/margin_top = 50
custom_constants/margin_left = 50
custom_constants/margin_bottom = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Pause/MarginContainer"]
pause_mode = 2
margin_left = 50.0
margin_top = 50.0
margin_right = 1870.0
margin_bottom = 1030.0
size_flags_horizontal = 5
size_flags_vertical = 5
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Pause/MarginContainer/VBoxContainer"]
pause_mode = 2
margin_top = 332.0
margin_right = 1820.0
margin_bottom = 648.0
size_flags_horizontal = 5
size_flags_vertical = 5
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Pause/MarginContainer/VBoxContainer/HBoxContainer"]
pause_mode = 2
margin_left = 782.0
margin_right = 1038.0
margin_bottom = 316.0
custom_constants/separation = 30

[node name="Label" type="Label" parent="Pause/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
pause_mode = 2
margin_right = 256.0
margin_bottom = 34.0
custom_fonts/font = ExtResource( 3 )
text = "Game Paused"
align = 1
valign = 1

[node name="ResumeButton" type="TextureButton" parent="Pause/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
pause_mode = 2
margin_top = 64.0
margin_right = 256.0
margin_bottom = 128.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 4 )
texture_focused = ExtResource( 4 )

[node name="Label" type="Label" parent="Pause/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/ResumeButton"]
pause_mode = 2
margin_left = 8.0
margin_top = 8.0
margin_right = 248.0
margin_bottom = 56.0
size_flags_vertical = 1
custom_fonts/font = ExtResource( 3 )
text = "Resume"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Main Menu" type="TextureButton" parent="Pause/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
pause_mode = 2
margin_top = 158.0
margin_right = 256.0
margin_bottom = 222.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 4 )
texture_focused = ExtResource( 4 )

[node name="Label" type="Label" parent="Pause/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/Main Menu"]
pause_mode = 2
margin_left = 8.0
margin_top = 8.0
margin_right = 248.0
margin_bottom = 56.0
size_flags_vertical = 1
custom_fonts/font = ExtResource( 3 )
text = "Main Menu"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="TextureButton" parent="Pause/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
pause_mode = 2
margin_top = 252.0
margin_right = 256.0
margin_bottom = 316.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 8 )
texture_focused = ExtResource( 8 )

[node name="Label" type="Label" parent="Pause/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/QuitButton"]
pause_mode = 2
margin_left = 8.0
margin_top = 8.0
margin_right = 248.0
margin_bottom = 56.0
size_flags_vertical = 1
custom_fonts/font = ExtResource( 3 )
text = "Quit"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Pause/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/ResumeButton" to="Pause" method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="Pause/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/Main Menu" to="Pause" method="_on_Main_Menu_pressed"]
[connection signal="pressed" from="Pause/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/QuitButton" to="Pause" method="_on_QuitButton_pressed"]
